# pipex

./: .gitignore  README.md  error.c
include/: error.h
pipex/: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  pipex
pipex/cmake.debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
pipex/include/: environ.h  error.h  parse.h  pipex.h  utils.h
pipex/src/: environ.c  error.c  error.d  main.c  parse.c  pipex.c  pipex.d
pipex/src/utils/: alloca_to.c  child_by_index.c  cleanup.c  ft_isspace.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memcpy.c  ft_memset.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_splitf.c  ft_strchr.c  ft_strcmp.c  ft_strdup_until.c  ft_strjoin.c  ft_strlen.c  ft_strlen_until.c  getbin.c  ternary_op.c
